--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "electron-squirrel-startup": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.7",
+    "sqlite3": "5.1.2",
     "tslib": "^2.4.0",
+    "typeorm": "0.3.10",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
