taiga version up + refactoring

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "didveli-gallery",
   "version": "1.0.0",
   "description": "App for Didveli Gallery apartments",
-  "homepage": "https://github.com/maximegris/angular-electron",
+  "homepage": "https://github.com/MishkaKlkv/didveli-gallery",
   "author": {
     "name": "Mikhail Klokov",
     "email": "klokov.mixan@gmail.com"
@@ -10,16 +10,15 @@
   "keywords": [
     "angular",
     "angular 14",
+    "taiga",
+    "taiga-ui",
     "electron",
     "electron 19",
     "nodejs",
     "typescript",
-    "playwright",
     "eslint",
-    "sass",
     "windows",
-    "mac",
-    "linux"
+    "mac"
   ],
   "main": "app/main.js",
   "private": true,
@@ -54,12 +53,12 @@
     "@angular/platform-browser": "14.2.8",
     "@angular/platform-browser-dynamic": "14.2.8",
     "@angular/router": "14.2.8",
-    "@taiga-ui/addon-preview": "^3.8.0",
-    "@taiga-ui/addon-table": "^3.8.0",
-    "@taiga-ui/cdk": "^3.8.0",
-    "@taiga-ui/core": "^3.8.0",
-    "@taiga-ui/icons": "^3.8.0",
-    "@taiga-ui/kit": "^3.8.0",
+    "@taiga-ui/addon-preview": "^3.15.0",
+    "@taiga-ui/addon-table": "^3.15.0",
+    "@taiga-ui/cdk": "^3.15.0",
+    "@taiga-ui/core": "^3.15.0",
+    "@taiga-ui/icons": "^3.15.0",
+    "@taiga-ui/kit": "^3.15.0",
     "@taiga-ui/styles": "^3.8.0",
     "@tinkoff/ng-dompurify": "3.0.0",
     "dompurify": "2.2.9",
